--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fictional_portfolio",
+  "name": "modern_portfolio",
   "version": "1.0.0",
   "description": "Responsive Portfolio Website",
   "main": "index.js",
